# escudo-vpn

./: .gitignore  Cargo.toml  fix_pages.py  generate-ads.mjs  generate-assets.mjs  generate-round2.mjs  generate-video.mjs  harden-tunnel-node.sh  main.rs  vpn.rs
.github/workflows/: windows-tauri-build.yml
apps/android/: .gitignore  gradle.properties  gradlew  release-signing.env.example  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/res/values/: colors.xml  strings.xml
apps/windows/: package-lock.json  package.json
apps/windows/scripts/: bootstrap-windows.ps1  build-windows.ps1
apps/windows/src/: index.html  manifest.webmanifest  sw.js
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/src/: api.rs  main.rs  vpn.rs  wireguard.rs
apps/windows/src/css/: style.css
apps/windows/src/js/: app.js
config/: api.env.example  api.toml  deploy.toml  dns.toml  gateway.toml  guardian.toml  proxy.toml  rosenpass.toml  sniproxy.toml
configs/: selective-routing-sp01.sh
crates/escudo-admin/: Cargo.toml
crates/escudo-admin/src/: config.rs  main.rs  middleware.rs  router.rs  state.rs
crates/escudo-admin/src/routes/: dashboard.rs  mod.rs  ops.rs  servers.rs  stats.rs  tenants.rs  users.rs
crates/escudo-admin/static/: dashboard.html
crates/escudo-api/: Cargo.toml  build.rs
crates/escudo-api/src/: backend_control.rs  config.rs  main.rs  middleware.rs  qr.rs  router.rs  state.rs  telemetry.rs
crates/escudo-api/src/routes/: account.rs  anon_auth.rs  auth.rs  billing.rs  billing_dlocal.rs  billing_pix.rs  family.rs  favorites.rs  internal.rs  mod.rs  network.rs  profiles.rs  referral.rs  security.rs  settings.rs  stats.rs  vpn.rs  ws.rs
crates/escudo-client/: Cargo.toml
crates/escudo-client/src/: config.rs  killswitch.rs  lib.rs  tunnel.rs
crates/escudo-common/: Cargo.toml
crates/escudo-common/src/: config.rs  crypto.rs  error.rs  jwt.rs  lib.rs  models.rs  types.rs
crates/escudo-db/: Cargo.toml
crates/escudo-db/src/: lib.rs
crates/escudo-deploy/: Cargo.toml
crates/escudo-deploy/src/: cloudinit.rs  config.rs  main.rs  provider.rs  reconciler.rs  ssh.rs
crates/escudo-deploy/src/providers/: hetzner.rs  mod.rs  vultr.rs
crates/escudo-dns/: Cargo.toml
crates/escudo-dns/src/: blocklist.rs  config.rs  handler.rs  main.rs  policy.rs  server.rs  stats.rs
crates/escudo-gateway/: Cargo.toml
crates/escudo-gateway/src/: config.rs  grpc.rs  health.rs  main.rs  proxy.rs  stats.rs  wg.rs
crates/escudo-guardian/: Cargo.toml
crates/escudo-guardian/src/: analytics.rs  checker.rs  config.rs  main.rs  rotator.rs
crates/escudo-ip-manager/: Cargo.toml
crates/escudo-ip-manager/src/: main.rs
crates/escudo-provisioner/: Cargo.toml
crates/escudo-provisioner/src/: main.rs
crates/escudo-proxy/: Cargo.toml
crates/escudo-proxy/src/: credential.rs  lib.rs  pool.rs  provider.rs
crates/escudo-proxy/src/providers/: iproyal.rs  mod.rs  proxycheap.rs
crates/escudo-sniproxy/: Cargo.toml
crates/escudo-sniproxy/src/: config.rs  main.rs  proxy.rs  sni.rs
deploy/: escudo-admin.service  escudo-api.service  escudo-dns.service  escudo-gateway.service  escudo-guardian.service  escudo-rosenpass.service  escudo-sniproxy.service  escudo-victoriametrics.service  grafana-dashboard.json  nginx-escudo.conf  nginx-site.conf  setup-gateway.sh  setup-rosenpass.sh  sysctl-wireguard.conf  victoriametrics.yml
docs/: BUILD_WINDOWS.md  ESCUDO-PROJECT-STATE.md  LIGHTNODE_API_RESEARCH.md  VULTR_API_RESEARCH.md  WEBSITE_PLAYBOOK.md  app-redesign-complete-spec.md  competitor-analysis.md  gotatun-daita-integration-spec.md  ops-control-plane-design.md  site-app-handoff-2026-03-28.md
docs/superpowers/plans/: 2026-03-21-green-luxury-css-homepage.md  2026-03-21-infrastructure-upgrade.md  2026-03-23-google-ads-agent.md
docs/superpowers/specs/: 2026-03-21-green-luxury-brand-design.md  2026-03-21-infrastructure-upgrade-design.md  2026-03-22-pearl-precision-redesign.md  2026-03-23-google-ads-agent-design.md
docs/testing/: staging-checklist.md  staging-signoff-template.md
migrations/: 20240101000001_create_users.sql  20240101000002_create_servers.sql  20240101000003_create_tenants.sql  20240101000004_create_devices.sql  20240101000005_create_usage_logs.sql  20240101000006_create_blocked_domains.sql  20260315000001_create_server_chains.sql  20260315000002_create_subscriptions.sql  20260320000001_create_dns_stats.sql  20260321000001_alter_servers_multi_interface.sql  20260321000002_alter_subscriptions_add_tier.sql  20260321000003_create_provider_servers.sql  20260321000004_create_proxy_ips.sql  20260321000005_create_server_proxy_assignments.sql  20260321000006_create_ip_health_logs.sql  20260321000007_create_ip_rotation_logs.sql  20260322000001_create_family_profiles.sql  20260323000001_create_ip_health_checks.sql  20260323000002_add_servers_tunnel_network.sql  20260327010000_add_ops_control_plane_foundations.sql  20260327190000_add_launch_controls_sessions_and_journey.sql  20260327194500_add_parental_controls_foundations.sql
proto/: gateway.proto
scripts/audit/: backend_control_plane_audit.sh  backend_data_plane_sample.sh  lockdown_premium_ports.sh  proof_client_harness.sh  run_single_br_proof.sh
scripts/load/: README.md  build_dnsperf_queries.sh  distributed_mixed_load.sh  distributed_probe_10_br.sh  distributed_probe_batch.sh  distributed_probe_scale_br.sh  dnsperf-queries.txt  k6-api-smoke.js  k6-connect-cycle.js  remote_ns_probe.sh  run_dns_stress.sh  run_launch_stress.sh  wg-peer-load.sh
scripts/ops/: node_metrics_collector.py
scripts/provision/: harden-tunnel-node.sh
seo-generator/: blog_generator.py  config.py  generate.py  models.py  queries.py  requirements.txt  sample_data.py  scores.py  slugify_br.py
seo-generator/research/: full-playbook.md  keyword-research.md  seo-playbook.md  todo-indexing.md
seo-generator/templates/: base.html  blog_index.html  blog_post.html  municipality.html  national.html  state.html
(+32 files in other folders)
