[package]
name = "escudo-admin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "escudo-admin"
path = "src/main.rs"

[dependencies]
escudo-common = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
jsonwebtoken = { workspace = true }
