[package]
name = "escudo-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "escudo-api"
path = "src/main.rs"

[dependencies]
escudo-common = { workspace = true }
escudo-proxy = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
hmac = { workspace = true }
image = { workspace = true }
prost = { workspace = true }
qrcode = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
x25519-dalek = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
urlencoding = "2"

[build-dependencies]
tonic-build = { workspace = true }
