[package]
name = "escudo-common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
aes-gcm = { workspace = true }
