[package]
name = "escudo-deploy"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "escudo-deploy"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
async-trait = "0.1"
escudo-proxy = { workspace = true }
