[package]
name = "escudo-dns"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "escudo-dns"
path = "src/main.rs"

[dependencies]
escudo-common = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
hickory-server = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
futures = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
