[package]
name = "escudo-guardian"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "escudo-guardian"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "socks"] }
sqlx = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
escudo-proxy = { workspace = true }
